Update Header Part 1

--- a/lang/en.json
+++ b/lang/en.json
@@ -161,12 +161,12 @@
         "and": "and",
         "compare": "Compare",
         "change": "Change",
-        "sign_up": "Register",
+        "sign_up": "CREATE AN ACCOUNT",
         "login": "Sign in",
         "login_for_pricing": "Log in for pricing",
         "logout": "Sign out",
         "account": "Account",
-        "cart": "Cart",
+        "cart": "SHOPPING CART",
         "search": "Search",
         "gift_cert": "Gift Certificates",
         "save": "Save",
